# courses

./: README.md
Courses/: .gitignore
Courses/Agents/CrewAi/crew-agents/: .env.example  .gitignore  README.md  pyproject.toml
Courses/Agents/CrewAi/crew-agents/src/simple_agent/: main.py
Courses/Agents/CrewAi/crew-agents/src/simple_agent/config/: agents.yaml  tasks.yaml
Courses/Docker/KodeKloud-docker-beginner/: README.md
Courses/docker/: README.md
Docker/: .gitkeep  README.md
